-------------------------------------------------------------------------------
  Version 20220224 (2022-02-24)
-------------------------------------------------------------------------------
  * Initial release