@@ -1,0 +1,78 @@
+# sparkylinux app launcher 2022/03/03
+[core-version-1]
+units=['xembed', 'toplevel1', 'launcher']
+
+[global]
+is-dark=false
+is-custom=false
+logout-command='loginctl terminate-session $XDG_SESSION_ID'
+shutdown-command='systemctl poweroff'
+
+lock-command=''
+
+[toplevel1]
+object-type='toplevel'
+strut=false
+monitor=-1
+background-type='image'
+panel-gravity='west-center'
+height=55
+icon-size=48
+auto-hide=false
+enable-font-color=true
+font-color='rgb(255,255,255)'
+background-file='/usr/share/vala-panel/images/background.png'
+
+
+autohide=true
+dock=true
+width=30
+use-background-color=true
+use-foreground-color=false
+corner-radius=4
+use-toolbar-appearance=true
+
+use-background-file=false
+background-color='rgba(0,0,0,0)'
+foreground-color='rgba(0,0,0,0)'
+use-font=true
+font='Sans 13'
+font-size-only=false
+
+[sep1]
+
+[menu]
+menu-name=nothing
+
+[launcher]
+toplevel-id='toplevel1'
+plugin-type='org.valapanel.launchbar'
+launch-buttons=['firefox.desktop', 'firefox-esr.desktop', 'sparky-aptus-appcenter.desktop', 'lxde-x-terminal-emulator.desktop']
+position=0
+
+object-type='applet'
+
+[sep2]
+
+[wcm]
+image='gnome-window-manager'
+
+[sep3]
+
+[pgr]
+
+[sep4]
+
+[tlist]
+
+[cpu]
+
+[xembed]
+toplevel-id='toplevel1'
+plugin-type='org.valapanel.xembed'
+position=1
+pack-type='end'
+
+object-type='applet'
+
+[clock]
