@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20220303 (2022-03-03)
+-------------------------------------------------------------------------------
+  * Launch sparky conf if vala-panel does not exist
+
+-------------------------------------------------------------------------------
   Version 20220224 (2022-02-24)
 -------------------------------------------------------------------------------
   * Initial release
